namespace TaoTie
{
    public static class FSMConst
    {
        public const string UseSkill = "UseSkill";
        public const string SkillId = "SkillId";
        public const string Jump = "Jump";
        public const string Land = "Land";
        public const string Shake = "Shake";
        public const string LeftFoot = "LeftFoot";
        public const string AngleVF = "AngleVF";
        public const string SprintBS = "SprintBS";
        public const string InCombat = "InCombat";
        
        public const string MotionFlag = "MotionFlag";
        public const string MotionDirection = "MotionDirection";
        
        public const string ShowWeapon = "ShowWeapon";

        public const string Die = "Die";
        
        public const string GadgetState = "GadgetState";
        
        public const string Alertness = "Alertness";

    }
}